--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
+@import url("styles/topicos.css");
+@import url("styles/contatos.css");
+@import url("styles/rodape.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
     --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --azul-degrade: #326589;
     --fonte-principal: "Poppins";
+    --azul: #002f52;
+
 }
 
 body {
@@ -60,7 +65,4 @@ body {
     color: var(--branco);
     font-style: bold;
     text-decoration: none;
-}
-.topicos__titulo{
-    background-color: var(--azul-degrade);
 }
