--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@
     --azul-degrade: #326589;
     --fonte-principal: "Poppins";
     --azul: #002f52;
-
+    --fonte-secundaria: "Josefin Sans";
+    --preto: #000000;
 }
 
 body {
@@ -40,7 +41,7 @@ body {
 .descricao__titulo-desc {
     font-family: var(--fonte-principal);
     font-size: 14px;
-    color: black;
+    color: var(--preto);
 
 }
 .card__botoes {
