--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -51,3 +51,22 @@
     font-weight: 700;
     padding: 2em 0 1em 0;
 }
+@media screen and (min-width: 1024px){
+    .carrossel__titulo {
+        font-size: 26px;
+    }
+.swiper-pagination {
+    margin: 2em 0 3em 0;
+}
+.swiper {
+    width: 60%;
+}
+.swiper-button-next,
+.swiper-button-prev{
+    display: flex;
+    height: 25%;
+}
+.card {
+
+}
+}
