--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     --azul: #002f52;
     --fonte-secundaria: "Josefin Sans";
     --preto: #000000;
+    --cor-titulo-rodape: #858585; 
 }
 
 body {
@@ -66,4 +67,12 @@ body {
     color: var(--branco);
     font-style: bold;
     text-decoration: none;
+}
+
+@media screen and(min-width:1024px) {
+    .card {
+        display: flex;
+        justify-content: center;
+    }
+    
 }
