--- a/styles/contatos.css
+++ b/styles/contatos.css
@@ -31,3 +31,22 @@
     background: url(../img/Vector.svg) no-repeat;
     padding-left: 2em;
 }
+
+@media screen and (min-width:1024px) {
+    .newsletter{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .news__email{
+        width: 40%;
+        height: 10%;
+    }
+    .news__descriçao {
+        margin-right: 1em;
+        width: 30%;
+    }
+    .news__titulo {
+        font-size: 24px;
+    }
+}
