--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -71,3 +71,20 @@
     margin: 2em auto;
 }
 }
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container{
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+    }
+    .swiper-pagination {
+        margin: 1em 0;
+    }
+    .descricao__titulo {
+        font-size: 320px;
+    }
+    .descricao__titulo-livro {
+        font-size: 18px;
+    }
+}
