--- a/styles/contatos.css
+++ b/styles/contatos.css
@@ -50,3 +50,8 @@
         font-size: 24px;
     }
 }
+@media screen and (min-width: 1728px) {
+    .newsletter{
+        padding: 3em 20vw;
+    }
+}
